--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "loatimer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://BeeMOre32.github.io/CleanArk",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
@@ -15,6 +16,8 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "babel-plugin-macros": "^3.1.0",
+    "classnames": "^2.3.1",
+    "gh-pages": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
@@ -24,12 +27,15 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
+    "recoil-persist": "^4.2.0",
     "sass": "^1.54.4",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
